cleaning up parser

--- a/scripts/cleaning/sumstats_cleaning.Rmd
+++ b/scripts/cleaning/sumstats_cleaning.Rmd
@@ -28,27 +28,51 @@ library(tidyverse)
 
 ```{r command line setup}
 clParser <- OptionParser()
-clParser <- add_option(clParser, c("-t", "--task"), type="character", default="clean",
-                help="The explicit task to run:\nclean: Clean GWAS sumstat [default %default]")
-clParser <- add_option(clParser, c("-f", "--file"), type="character",
-                help="The file to process")
-clParser <- add_option(clParser, c("-c", "--code"), type="character",
-                help="The code to use for the dataset from the specified file.")
-clParser <- add_option(clParser, c("-n", "--sample-size"), type="numeric",
-                help="Number of individuals in the sample.")
 
-clOptions<-parse_args(clParser)
+clParser <- add_option(
+  object = clParser,
+  opt_str = c("-t", "--task"),
+  type= "character",
+  default="clean",
+  help = "The explicit task to run:\nclean: Clean GWAS sumstat [default %default]"
+  )
+
+clParser <- add_option(
+  object = clParser,
+  opt_str = c("-f", "--file"),
+  type = "character",
+  help="The file to process"
+  )
+
+clParser <- add_option(
+  object = clParser,
+  opt_str = c("-c", "--code"),
+  type = "character",
+  help = "The code to use for the dataset from the specified file."
+  )
+
+clParser <- add_option(
+  object = clParser,
+  opt_str = c("-n", "--sample-size"),
+  type = "numeric",
+  help = "Number of individuals in the sample."
+  )
+
+clOptions <- parse_args(clParser)
 ```
 
 # Script settings
 ```{r Script setting}
-filename.rmd<-"sumstats_cleaning.Rmd"
+filename.rmd <- "sumstats_cleaning.Rmd"
 
-#explicitly set total N
+# explicitly set total N
 cN <- clOptions$`sample-size`
-#setting for keeping or removing indels
-keepIndel<-F
-mhc.filter<-37
+
+# setting for keeping or removing indels
+keepIndel <- F
+
+# setting for MHC filter
+mhc.filter <- 37
 ```
 
 # R script export
